--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,6 +3,9 @@ driver:
   name: vagrant
   require_chef_omnibus: true
 
+provisioner:
+  name: chef_zero
+
 platforms:
 - name: ubuntu-12.04
 - name: ubuntu-10.04
