--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,12 +1,49 @@
 ---
-driver_plugin: vagrant
-driver_config:
+driver:
+  name: vagrant
+  customize:
+    cpus: 4
+    memory: 1536
   require_chef_omnibus: true
+
+provisioner:
+  name: chef_zero
+  client_rb:
+    environment: dev
 
 platforms:
 - name: ubuntu-12.04
 
 suites:
-- name: default
-  run_list: ["recipe[storm]"]
-  attributes: {}
+- name: zookeeper1
+  run_list:
+  - recipe[apt]
+  - recipe[zookeeper]
+  - role[zookeeper]
+  driver_config:
+    network:
+    - [ 'private_network', {ip: '192.168.33.10'}]
+  attributes:
+    exhibitor:
+      opts:
+        configtype: file
+- name: supervisor
+  run_list:
+  - recipe[apt]
+  - recipe[apache_storm::supervisor]
+  driver_config:
+    network:
+    - [ 'private_network', {ip: '192.168.33.12'}]
+- name: nimbus
+  run_list: 
+  - recipe[et_hostname]
+  - recipe[apache_storm::nimbus]
+  driver_config:
+    network:
+    - [ 'private_network', {ip: '192.168.33.11'}]
+  attributes:
+    et_hostname:
+      addl_hosts_entries:
+        - '10.0.2.15 dev-storm-nimbus-1b.priv.evertrue.com dev-storm-nimbus-1b'
+        - '192.168.33.10 dev-zookeeper-1b.priv.evertrue.com dev-zookeeper 1b'
+        - '192.168.33.10 dev-storm-supervisor-1b.priv.evertrue.com dev-storm-supervisor-1b'
