--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -25,8 +25,9 @@ suites:
     - [ 'private_network', {ip: '192.168.33.10'}]
   attributes:
     exhibitor:
-      opts:
-        configtype: file
+      version: 1.5.2
+    zookeeper:
+      service_style: exhibitor
 - name: supervisor
   run_list:
   - recipe[apt]
