--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 - 2.1
 before_install:
 - openssl aes-256-cbc -K $encrypted_3ab969986410_key -iv $encrypted_3ab969986410_iv
-  -in travis_ci_ec2.pem.enc -out ~\/.ssh/travis_ci_ec2.pem -d
+  -in travis_ci_ec2.pem.enc -out ~/.ssh/travis_ci_ec2.pem -d
 - mkdir ~/.chef
 - echo 'node_name "trubot"' >> ~/.chef/knife.rb
 - chmod 600 ~/.chef/knife.rb ~/.ssh/travis_ci_ec2.pem
